--- a/LineWaiter/line-waiter/src/index.css
+++ b/LineWaiter/line-waiter/src/index.css
@@ -29,12 +29,11 @@ code {
   display: flex;
   flex-direction: column;
   min-height: 10rem;
-  min-width: 100vw;
+  width: 100vw;
   background: #3A5661;
-  padding-left: 20%;
   padding-top: 2rem;
-  justify-content: center;
-  align-items: center;
+  justify-content: center; /* Adjusted for vertical centering or space distribution */
+  align-items: center; /* Correct value for horizontal centering */
 }
 
 .home-intro {
